adiciona qr scanner

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 		}
 	</style>
 	<!-- <script type="text/javascript" src="qr-scanner/qr-scanner.min.js"></script> -->
-	<script type="text/javascript" src="http://livejs.com/live.js"></script>
+	<!-- <script type="text/javascript" src="http://livejs.com/live.js"></script> -->
 </head>
 <body>
 	<div class="container">
